tests/ast_block_stmt_list_missing_separator.stderr
tests/ast_block_stmt_list_missing_separator.sl:3:17: error: SL1004: unexpected token
