tests/ast_block_stmt_list_missing_separator.sl
// Verifies the AST for block stmt list missing separator.
fn main() {
    if true { 1 2 }
}
